--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -320,7 +320,7 @@ html.frame {
   color: var(--math-color) !important;
 }
 
-.prose a {
+.prose a:not([role]) {
   display: inline-block;
   background: var(--raw-bg-color, #e5e9f0);
   color: var(--accent, #2337ff);
@@ -332,9 +332,15 @@ html.frame {
   margin-bottom: 0.2em;
   transition: background 0.15s, color 0.15s;
 }
-.prose a:hover {
+.prose a:not([role]):hover {
   background: var(--accent, #2337ff);
   color: #fff;
+}
+.prose a[role] {
+  all: unset;
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .parent:has(> [data-typst-label^="footnote-"]) {
@@ -391,6 +397,11 @@ html.frame {
   padding: 0;
 }
 
+.prose sup,
+sup {
+  text-decoration: underline;
+}
+
 
 .prose sup a,
 sup a {
@@ -401,6 +412,7 @@ sup a {
   font-size: 0.85em !important;
   line-height: 1 !important;
   margin-left: -0.15em !important;
+  text-decoration: underline !important;
   vertical-align: super !important;
   display: inline !important;
   font-weight: bold !important;
