--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -206,7 +206,9 @@ pre > code {
 }
 
 blockquote {
-  border-left: 4px solid rgba(35, 55, 255, 0.3);
+  /* border-left: 4px solid rgba(35, 55, 255, 0.3); */
+  background-color: #f9f9f9; /* Subtle light gray background */
+  border-left: 5px solid #ccc; /* Prominent left border for emphasis */
   padding: 0 0 0 18px;
   margin: 0px;
   /* font-size: 1.333em; */
@@ -454,4 +456,12 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
   color: var(--accent-dark, #000d8a);
   background: none;
   text-decoration: underline;
+}
+
+.prose pre,
+pre {
+    padding: 0em;
+    margin-top: -0.5em !important;
+    margin-bottom: 0.5em !important;
+    border-radius: 8px;
 }
