--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -322,28 +322,25 @@ html.frame {
   color: var(--math-color) !important;
 }
 
-.prose a:not([role]) {
+.prose a {
   display: inline-block;
-  background: var(--raw-bg-color, #e5e9f0);
-  color: var(--accent, #2337ff);
-  padding: 0.15em 0.3em;
-  border-radius: 10px;
+  /* background: var(--raw-bg-color, #e5e9f0); */
+  /* color: var(--accent, #1d1d20);   */
+  color: rgb(149, 84, 164);
   font-size: 0.95em;
   font-weight: 500;
   text-decoration: none;
-  margin-bottom: 0.2em;
   transition: background 0.15s, color 0.15s;
 }
-.prose a:not([role]):hover {
-  background: var(--accent, #2337ff);
-  color: #fff;
+.prose a:hover {
+  color: #669cc0;
 }
-.prose a[role] {
+/* .prose a[role] {
   all: unset;
   color: inherit;
   text-decoration: none;
   cursor: pointer;
-}
+} */
 
 .parent:has(> [data-typst-label^="footnote-"]) {
   background: #f0f8ff;
