--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -21,6 +21,7 @@ const { title, desc, date, updatedDate, tags } = Astro.props;
         max-width: 100%;
         margin: auto;
         color: var(--main-color);
+        margin-bottom: 2em;
       }
       .title {
         margin-bottom: 1em;
