--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -36,6 +36,11 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
   href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
   rel="stylesheet"
 />
+<link
+  href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;500;700&display=swap"
+  rel="stylesheet"
+/>
+
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
