--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,7 +32,7 @@
 }
 
 body {
-  --vp-font-family-base: "Inter", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --vp-font-family-base: "Merriweather", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   --vp-font-family-mono: ui-monospace, "SF Mono", "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace;
 
   font-family: var(--vp-font-family-base);
@@ -79,6 +79,10 @@ strong,
 b {
   font-weight: 700;
 }
+.home-link {
+  font-family: "Merriweather", serif;
+  font-weight: 700;
+}
 a {
   color: var(--accent);
 }
@@ -121,11 +125,6 @@ a:hover {
   margin-top: 0;
 }
 
-.prose p {
-  /* margin-top: 0em; */
-  /* margin-bottom: 0em; */
-  /* margin-bottom: 1em; */
-}
 textarea {
   width: 100%;
   font-size: 16px;
