--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -187,16 +187,10 @@ samp {
 }
 
 code {
-  /* padding: 2px 5px; */
   background-color: var(--raw-bg-color);
-  /* border-radius: 2px; */
 }
 
 pre {
-  /* all: unset !important; */
-  padding: 1.5em;
-  margin-top: -0.5em !important;
-  margin-bottom: -0.5em !important;
   border-radius: 8px;
 }
 
@@ -205,12 +199,10 @@ pre > code {
 }
 
 blockquote {
-  /* border-left: 4px solid rgba(35, 55, 255, 0.3); */
-  background-color: #f9f9f9; /* Subtle light gray background */
-  border-left: 5px solid #ccc; /* Prominent left border for emphasis */
+  background-color: #f9f9f9;
+  border-left: 5px solid #ccc;
   padding: 0 0 0 18px;
   margin: 0px;
-  /* font-size: 1.333em; */
 }
 
 hr {
@@ -239,7 +231,7 @@ dd::after {
   content: "";
   display: block;
   height: 0;
-  margin-bottom: 0.5em; /* Optional: adds space between pairs */
+  margin-bottom: 0.5em;
 }
 
 ol {
@@ -260,13 +252,9 @@ ul {
   height: 1px;
   width: 1px;
   overflow: hidden;
-  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
   clip: rect(1px 1px 1px 1px);
-  /* maybe deprecated but we need to support legacy browsers */
   clip: rect(1px, 1px, 1px, 1px);
-  /* modern browsers, clip-path works inwards from each corner */
   clip-path: inset(50%);
-  /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
   white-space: nowrap;
 }
 figcaption {
@@ -350,27 +338,6 @@ html.frame {
   border-radius: 0.5em;
 }
 
-/*
-.prose sup,
-sup {
-  text-decoration: underline;
-}
-
-.prose sup a,
-sup a {
-  all: unset;
-  cursor: pointer;
-  color: var(--gray-dark, #555) !important;
-  font-size: 0.85em !important;
-  line-height: 1 !important;
-  margin-left: -0.15em !important;
-  text-decoration: underline !important;
-  vertical-align: super !important;
-  display: inline !important;
-  font-weight: bold !important;
-}
- */
-
 .prose sup a:hover,
 sup a:hover {
   color: var(--gray-dark, #555) !important;
@@ -409,10 +376,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
   text-decoration: underline;
 }
 
-.prose pre,
-pre {
+.prose pre {
     padding: 0em;
-    margin-top: -0.5em !important;
-    margin-bottom: 0.5em !important;
     border-radius: 8px;
 }
