--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -18,9 +18,16 @@ export async function getStaticPaths() {
 
 const { file, slug } = Astro.props as { file: string; slug: string };
 const html = fs.readFileSync(file, "utf8");
-const posts = (await getCollection("blog")).sort(
-  (a, b) => b.data.date.valueOf() - a.data.date.valueOf()
-);
+const posts = (await getCollection("blog"))
+  .map((p) => {
+    const sortDate = p.data.updatedDate ?? p.data.date;
+    const sortMs =
+      sortDate instanceof Date
+        ? sortDate.valueOf()
+        : new Date(sortDate as unknown as string).valueOf();
+    return { ...p, sortMs };
+  })
+  .sort((a, b) => b.sortMs - a.sortMs);
 const post = posts.find((p) => p.id === slug)!;
 const allTags = Array.from(
   new Set(posts.flatMap((p) => p.data.tags ?? []))
