--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
  */
 
 :root {
-  --main-color: black;
+  --main-color: #333333;
   --raw-bg-color: rgba(101, 117, 133, 0.16);
   --main-bg-color: white;
   --nav-bg-color: white;
@@ -207,7 +207,7 @@ blockquote {
 
 hr {
   border: none;
-  border-top: 1px solid var(--raw-bg-color);
+  border-top: 2px solid rgb(19, 19, 19);
 }
 
 dt {
