Remove garbage from BlogPost.astro

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -18,37 +18,9 @@ const { title, desc, date, updatedDate, tags } = Astro.props;
         margin: auto;
         color: var(--main-color);
         margin-bottom: 32px;
+        font-size: 1.2rem;
       }
-      .title {
-        margin-bottom: 1em;
-        padding: 1em 0;
-        text-align: center;
-        line-height: 1;
-      }
-      .title h1 {
-        margin: 0 0 0.5em 0;
-        text-align: center;
-        letter-spacing: normal;
-      }
-      .date {
-        margin: 0.5em 0;
-        color: rgb(var(--date-color));
-        font-size: 0.9em;
-      }
-      .last-updated-on {
-        font-style: italic;
-        margin-top: 0.3em;
-      }
-      .tags {
-        margin: 1em 0;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 0.5em;
-        justify-content: center;
-      }
-      h1, h2, h3, h4, h5, h6, .sidebar-title {
-        letter-spacing: normal;
-      }
+      
       main {
         width: 800px;
         margin: 0 auto;
