--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,8 +34,8 @@ const posts = (await getCollection("blog"))
         padding: 2rem 1rem 3rem;
       }
       h1 {
-        margin: 0 0 0.25em 0;
-        font-size: clamp(2rem, 3vw, 2.6rem);
+        margin: 0 0 0.30em 0;
+        font-size: 3rem;
       }
       p.lead {
         margin: 0 0 1.5em 0;
