--- a/src/components/ArticleHeader.astro
+++ b/src/components/ArticleHeader.astro
@@ -55,11 +55,12 @@ tags.sort();
   .date {
     margin: 0.5em 0;
     color: rgb(var(--date-color));
-    font-size: 0.9em;
+    font-size: 1.2rem;
   }
 
   .last-updated-on {
     margin-top: 0.3em;
+    font-size: 1.2rem;
   }
 
   .tags {
