--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -41,6 +41,7 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
   rel="stylesheet"
 />
 
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
