--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -18,9 +18,10 @@ const { title, desc, date, updatedDate, tags } = Astro.props;
         margin: auto;
         color: var(--main-color);
         margin-bottom: 32px;
-        font-size: 1.2rem;
+        font-size: 1.4rem;
+        line-height: 1.4
       }
-      
+
       main {
         width: 800px;
         margin: 0 auto;
