--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -93,29 +93,49 @@ a:hover {
   color: var(--accent-dark);
 }
 
-.prose ol {
-  padding-left: 5px;
-  list-style-position: outside;
-  display: inline-block;
-}
-
+.prose ol, 
 .prose ul {
   padding-left: 5px;
+  margin-left: 22px;
   list-style-position: outside;
   display: inline-block;
+  list-style: none;
+}
+
+ol {
+  counter-reset: item;
+}
+
+.prose ol > li {
+  position: relative;
+  counter-increment: item;
+}
+
+.prose ul > li {
+  position: relative;
+}
+
+.prose ol:not([style*="list-style"]) > li::before {
+  content: counters(item, ".") ". ";
+  position: absolute;
+  left: -1.6em;
+  width: 1.2em;
+  text-align: right;
+  font-variant-numeric: tabular-nums;
+}
+
+.prose ul:not([style*="list-style"]) > li::before {
+  content: "•";
+  position: absolute;
+  left: -1.6em;
+  width: 1.2em;
+  text-align: right;
 }
 
 .prose p:has(+ ul), p:has(+ ol) {
   margin-bottom: 0;
 }
 
-.prose ul > li {
-  margin-left: 16px;
-}
-
-.prose ol > li {
-  margin-left: 16px;
-}
 
 .prose li > p {
   margin: 0;
@@ -349,18 +369,6 @@ sup a:hover {
   text-decoration: underline !important;
 }
 
-.prose > div:last-child {
-  width: 100%;
-  box-sizing: border-box;
-}
-
-.prose > div:last-child > ol:last-child {
-  width: 100%;
-  box-sizing: border-box;
-  margin-left: 0;
-  margin-right: 0;
-  max-width: 100%;
-}
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
 .prose h1 a, .prose h2 a, .prose h3 a, .prose h4 a, .prose h5 a, .prose h6 a {
