--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -292,13 +292,14 @@ figcaption {
   width: fit-content;
   margin: 0 0.15em;
   padding: 0 0.2em;
+  vertical-align: middle;
 }
 .block-equation {
   display: grid;
   place-items: center;
   overflow-x: auto;
   padding: 0.5em 0;
-  margin: 1em 0;
+  margin: 0 0;
 }
 .title h1 {
   text-align: center;
