--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,7 +32,7 @@
 }
 
 body {
-  --vp-font-family-base: "Crimson Text", "Hoefler Text", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --vp-font-family-base: "Crimson Pro", "Merriweather", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   --vp-font-family-mono: ui-monospace, "SF Mono", "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace;
 
   font-family: var(--vp-font-family-base);
