--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -159,7 +159,7 @@ input {
 table {
   width: 100%;
   border-collapse: collapse;
-  margin: 1.5em 0;
+  margin: 0 0;
   font-size: 1em;
   background: white;
   border-radius: 8px;
