--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -166,6 +166,10 @@ table {
   overflow: hidden;
   box-shadow: 0 2px 8px rgba(0,0,0,0.03);
 }
+.typst-frame {
+  max-width: 100% !important;
+  max-height: 100% !important;
+}
 
 th, td {
   padding: 0.75em 1em;
