--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -296,7 +296,7 @@ figcaption {
   width: fit-content;
   margin: 0 0.15em;
   padding: 0 0.2em;
-  vertical-align: middle;
+  /* vertical-align: middle; */
 }
 .block-equation {
   display: grid;
