--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,6 @@ body {
   font-family: var(--vp-font-family-base);
   margin: 0;
   padding: 0;
-  /* text-align: justify; */
   background: var(--main-bg-color);
   background-size: 100% 600px;
   word-wrap: break-word;
@@ -59,6 +58,7 @@ h6 {
   margin: 1.0rem 0 0.25rem 0;
   color: var(--main-color);
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 h1 {
   font-size: 3em;
@@ -70,10 +70,10 @@ h3 {
   font-size: 1.675em;
 }
 h4 {
-  font-size: 1.3em;
+  font-size: 1.5em;
 }
 h5 {
-  font-size: 1.1em;
+  font-size: 1.4em;
 }
 strong,
 b {
@@ -132,7 +132,7 @@ ol {
   text-align: right;
 }
 
-.prose p:has(+ ul), p:has(+ ol) {
+.prose p:has(+ ul), p:has(+ ol), p:has(+ :not(p)) {
   margin-bottom: 0;
 }
 
@@ -229,10 +229,52 @@ pre > code {
 }
 
 blockquote {
-  background-color: #f9f9f9;
-  border-left: 5px solid #ccc;
-  padding: 0 0 0 18px;
-  margin: 0px;
+    position: relative;
+}
+
+blockquote p {
+    font-weight: 700px;
+    text-align: center;
+}
+
+svg {
+  margin-top: 8px;
+}
+
+blockquote {
+  width:60%;
+  font-family:var(--vp-font-family-base);
+  /* font-style:italic; */
+  color: #555555;
+  padding:0.8em 30px 0.8em 75px;
+  border-left:8px solid #7cbac7 ;
+  line-height:1.6;
+  position: relative;
+  background:#f5f3f3;
+  margin:10px auto;
+  border-radius: 4px;
+}
+
+blockquote::before {
+  font-family:Arial;
+  content: "\201C";
+  color:#7cbac7;
+  font-size:4em;
+  position: absolute;
+  left: 10px;
+  top:-10px;
+}
+
+blockquote::after {
+  content: '';
+}
+
+blockquote span {
+  display:block;
+  color:#333333;
+  font-style: normal;
+  font-weight: bold;
+  margin-top:1em;
 }
 
 hr {
@@ -240,28 +282,21 @@ hr {
   border-top: 2px solid rgb(19, 19, 19);
 }
 
+dl {
+  border: 4px solid rgb(84, 84, 84);
+  border-radius: 4px;
+  margin-top: 8px;
+  margin-bottom: 0;
+}
 dt {
-  background: var(--raw-bg-color, #e5e9f0);
-  border-radius: 6px;
-  padding: 0.1em 0.5em;
-  display: inline-block;
-  font-weight: 600;
-  color: var(--main-color);
-  margin-top: 0.5em;
-  margin-bottom: 0.25em;
+  padding-left: 8px;
+  text-decoration: underline;
+  font-weight: bold;
 }
-
 dd {
-  display: inline;
-  color: var(--gray-dark);
-  margin-left: 0.1em;
-}
-
-dd::after {
-  content: "";
-  display: block;
-  height: 0;
-  margin-bottom: 0.5em;
+  margin: 0;
+  margin-left: 1em;
+  grid-column-start: 2;
 }
 
 ol {
@@ -298,7 +333,6 @@ figcaption {
   width: fit-content;
   margin: 0 0em;
   padding: 0 0em;
-  /* vertical-align: middle; */
 }
 .block-equation {
   display: grid;
@@ -374,26 +408,6 @@ sup a:hover {
   color: var(--gray-dark, #555) !important;
   background: none !important;
   text-decoration: underline !important;
-}
-
-
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
-.prose h1 a, .prose h2 a, .prose h3 a, .prose h4 a, .prose h5 a, .prose h6 a {
-  all: unset;
-  cursor: pointer;
-  color: var(--accent, #2337ff);
-  text-decoration: underline;
-  font-weight: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  display: inline;
-  letter-spacing: 0.01em;
-}
-
-.prose h1 a:hover, .prose h2 a:hover, .prose h3 a:hover, .prose h4 a:hover, .prose h5 a:hover, .prose h6 a:hover {
-  color: var(--accent-dark, #000d8a);
-  background: none;
-  text-decoration: underline;
 }
 
 .prose pre {
