--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -132,7 +132,7 @@ ol {
   text-align: right;
 }
 
-.prose p:has(+ ul), p:has(+ ol), p:has(+ :not(p)) {
+.prose p:has(+ ul), p:has(+ ol) {
   margin-bottom: 0;
 }
 
@@ -147,6 +147,10 @@ ol {
   text-align: justify;
   letter-spacing: 0.01em;
   line-height: 2rem;
+}
+
+.prose div + p, table + p {
+  /* margin-top: 1em; */
 }
 
 .prose div > p:last-child {
@@ -166,7 +170,8 @@ input {
 table {
   width: 100%;
   border-collapse: collapse;
-  margin: 0 0;
+  /* margin: 0 0; */
+  margin-bottom: 1em;
   font-size: 1em;
   background: white;
   border-radius: 8px;
@@ -247,11 +252,11 @@ blockquote {
   /* font-style:italic; */
   color: #555555;
   padding:0.8em 30px 0.8em 75px;
-  border-left:8px solid #7cbac7 ;
+  border-left:8px solid #7cbac7;
   line-height:1.6;
   position: relative;
   background:#f5f3f3;
-  margin:10px auto;
+  margin:16pt auto;
   border-radius: 4px;
 }
 
