--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -116,7 +116,7 @@ ol {
 }
 
 .prose ol:not([style*="list-style"]) > li::before {
-  content: counters(item, ".") ". ";
+  content: counter(item) ". ";
   position: absolute;
   left: -2.4em;
   width: 2.2em;
